--- a/groupstage_3.Rmd
+++ b/groupstage_3.Rmd
@@ -198,8 +198,8 @@ results_groupstage_2 <- data.frame(
                 "England","Italy","Ukraine","Austria",
                 "France","Czech Republic","Portugal","Romania"),
   
-  home_score = c(2,2,1,1,1,1,1,1,0,1,NA,NA), #<- Insert here tonight matches 
-  away_score = c(2,0,1,1,1,0,2,3,0,1,NA,NA), #<- Insert here tonight matches
+  home_score = c(2,2,1,1,1,1,1,1,0,1,0,2),
+  away_score = c(2,0,1,1,1,0,2,3,0,1,3,0),
   tournament = rep("UEFA Euro", ngames_prev))
 #-------------------------------------------------------------------------------
 # Groupstage 3 matches
